Some adjustments and updates * Service Worker fix * Attempt to fix Styling on ios 10.3 and below

--- a/src/components/SongList/SongList.scss
+++ b/src/components/SongList/SongList.scss
@@ -7,6 +7,11 @@
 		grid-template-columns: repeat(2, minmax(60px, 1fr));
 	}
 
+	.list-wrapper {
+		position: relative;
+		overflow-x: hidden;
+	}
+
 	.listItem {
 		align-items: center;
 		background-color: #fff;
@@ -34,35 +39,37 @@
 	}
 
 	.utilityHeader {
+		align-items: center;
 		background-color: #fff;
 		border-bottom: 1px solid #ddd;
 		color: #333;
-		display: flex;
-		justify-content: center;
-		height: 3.5rem;
+		display: grid;
 		font-size: 1.3rem;
+		grid-template-rows: 100%;
+		grid-template-columns: 1fr;
+		height: 3.5rem;
+		justify-items: center;
 		position: sticky;
 		max-width: 500px;
 		margin: auto;
 		top: 0;
+		position: relative;
 		width: 100%;
 		z-index: 10;
 
-		& button {
+		button {
+			align-items: center;
 			background-color: #fff;
 			border: 0;
 			border-right: 1px solid #ddd;
 			cursor: pointer;
-			flex: 1 1 100%;
+			display: grid;
+			grid-template-columns: auto 1fr;
+			width: 100%;
 			height: 100%;
 			padding: 0.5rem;
 		}
-
-		& > :last-child {
-			border-right: none;
-		}
-
-		& svg {
+		.icon {
 			height: 100%;
 			color: var(--dark-neutral-color);
 			fill: var(--dark-neutral-color);
@@ -71,6 +78,9 @@
 				color: var(--primary-color);
 				fill: var(--primary-color);
 			}
+		}
+		.label {
+			border-right: none;
 		}
 	}
 
